--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <load ="./partials/header.html" />
 
     <section>
       <h1>Lorem ipsum dolor sit amet.</h1>
@@ -17,7 +17,7 @@
     </section>
 
     <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <load ="./partials/vite-promo.html" />
 
     <script type="module" src="/main.js"></script>
   </body>
